--- a/2018/2018-05/2018-05-12/source/728x90.css
+++ b/2018/2018-05/2018-05-12/source/728x90.css
@@ -707,17 +707,33 @@
   -moz-animation: fadeIn 0.75s ease-in-out 0.5s forwards;
   animation: fadeIn 0.75s ease-in-out 0.5s forwards;
 }
-.logo {
-  background: url('./images/728x90_logo.png') no-repeat center center;
-  background-size: 100% auto;
-  width: 110px;
-  height: 66px;
-  top: 14px;
-  left: 218px;
+.man {
+  background: url('./images/320x50_man.png') no-repeat center center;
+  background-size: auto 100%;
+  width: 115px;
+  height: 144px;
+  top: -31px;
+  left: -56px;
 
-  -webkit-animation: fadeIn 0.75s ease-in-out 1.25s forwards;
-  -moz-animation: fadeIn 0.75s ease-in-out 1.25s forwards;
-  animation: fadeIn 0.75s ease-in-out 1.25s forwards;
+  -webkit-transform-origin: 50% 80%;
+  -moz-transform-origin: 50% 80%;
+  transform-origin: 50% 80%;
+
+  -webkit-animation: zoomIn 0.75s ease-in-out 1.25s forwards;
+  -moz-animation: zoomIn 0.75s ease-in-out 1.25s forwards;
+  animation: zoomIn 0.75s ease-in-out 1.25s forwards;
+}
+.text2 {
+  background: url('./images/728x90_text2.png') no-repeat center center;
+  background-size: auto 100%;
+  width: 237px;
+  height: 62px;
+  top: 22px;
+  left: 338px;
+
+  -webkit-animation: zoomIn 0.75s ease-in-out 1.25s forwards;
+  -moz-animation: zoomIn 0.75s ease-in-out 1.25s forwards;
+  animation: zoomIn 0.75s ease-in-out 1.25s forwards;
 }
 .text1 {
   background: url('./images/728x90_text1.png') no-repeat center center;
@@ -731,18 +747,19 @@
   -moz-animation: fadeInDown 0.75s ease-in-out 2s forwards;
   animation: fadeInDown 0.75s ease-in-out 2s forwards;
 }
-.text2 {
-  background: url('./images/728x90_text2.png') no-repeat center center;
-  background-size: auto 100%;
-  width: 237px;
-  height: 62px;
-  top: 22px;
-  left: 338px;
+.logo {
+  background: url('./images/728x90_logo.png') no-repeat center center;
+  background-size: 100% auto;
+  width: 110px;
+  height: 66px;
+  top: 14px;
+  left: 218px;
 
   -webkit-animation: fadeInDown 0.75s ease-in-out 2.5s forwards;
   -moz-animation: fadeInDown 0.75s ease-in-out 2.5s forwards;
   animation: fadeInDown 0.75s ease-in-out 2.5s forwards;
 }
+
 .legal {
   background: url('./images/728x90_legal.png') no-repeat center center;
   background-size: auto 100%;
