--- a/2018/2018-05/2018-05-17_2/source/160x600.css
+++ b/2018/2018-05/2018-05-17_2/source/160x600.css
@@ -930,6 +930,7 @@
 }
 .frame3-feature1 {
   background: url('./images/160x600_frame3_feature1.png') no-repeat center center;
+  background-size: 100% auto;
   width: 78px;
   height: 101px;
   top: 18px;
@@ -941,6 +942,7 @@
 }
 .frame3-feature2 {
   background: url('./images/160x600_frame3_feature2.png') no-repeat center center;
+  background-size: 100% auto;
   width: 78px;
   height: 102px;
   top: 140px;
@@ -952,6 +954,7 @@
 }
 .frame3-feature3 {
   background: url('./images/160x600_frame3_feature3.png') no-repeat center center;
+  background-size: 100% auto;
   width: 108px;
   height: 101px;
   top: 262px;
