--- a/2018/2018-05/2018-05-17_2/source/300x250_mobile.css
+++ b/2018/2018-05/2018-05-17_2/source/300x250_mobile.css
@@ -930,6 +930,7 @@
 }
 .frame3-feature1 {
   background: url('./images/300x250_mobile_frame3_feature1.png') no-repeat center center;
+  background-size: 100% auto;
   width: 66px;
   height: 83px;
   top: 25px;
@@ -941,6 +942,7 @@
 }
 .frame3-feature2 {
   background: url('./images/300x250_mobile_frame3_feature2.png') no-repeat center center;
+  background-size: 100% auto;
   width: 66px;
   height: 83px;
   top: 25px;
@@ -952,6 +954,7 @@
 }
 .frame3-feature3 {
   background: url('./images/300x250_mobile_frame3_feature3.png') no-repeat center center;
+  background-size: 100% auto;
   width: 80px;
   height: 83px;
   top: 25px;
