--- a/2018/2018-05/2018-05-17_2/source/300x600.css
+++ b/2018/2018-05/2018-05-17_2/source/300x600.css
@@ -930,6 +930,7 @@
 }
 .frame3-feature1 {
   background: url('./images/300x600_frame3_feature1.png') no-repeat center center;
+  background-size: 100% auto;
   width: 83px;
   height: 104px;
   top: 40px;
@@ -941,6 +942,7 @@
 }
 .frame3-feature2 {
   background: url('./images/300x600_frame3_feature2.png') no-repeat center center;
+  background-size: 100% auto;
   width: 83px;
   height: 104px;
   top: 163px;
@@ -952,7 +954,8 @@
 }
 .frame3-feature3 {
   background: url('./images/300x600_frame3_feature3.png') no-repeat center center;
-  width: 100px;
+  background-size: 100% auto;
+  width: 99px;
   height: 104px;
   top: 287px;
   left: 100px;
